MODSCHED-8: implement updates for timer (#67)